--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
     <artifactId>mysql-connector-j</artifactId>
     <version>8.3.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+    <version>3.5.6</version>
+</dependency>
 
 				</dependencies>
 			</plugin>
