--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.
 
 
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/validator?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
